--- a/index.html
+++ b/index.html
@@ -9,66 +9,66 @@
 </head>
 <body>
     <h1>Musik-Bingo</h1>
-    <input type="text" name="" id="raw" value="Iko Iko – Justin Wellington, Small Jam
-    Higher Power – Coldplay
-    I Need You To Hate Me – JC Stewart 
-    Cover Me In Sunshine – P!nk
-    All I Know So Far – P!nk
-    Zuhause – Max Giesinger
-    Head & Heart – Joel Corry, MNEK
-    For a Second – Michael Schulte
-    Head Shoulders Knees & Toes – Ofenbach
-    Joyride – Roxette
-    Midnight Sky – Miley Cyrus
-    River – Tom Gregory
-    Bad Habits – Ed Sheeran
-    Colorado – Milky Chance
-    Habit – Laurell
-    Girls Like Us – Zoe Wees
-    Throwback – Michael Patrick Kelly
-    All You Ever Wanted – Rag’n’Bone Man
-    Bye Bye – Sarah Connor
-    Watermelon Sugar – Harry Styles
-    Adore You – Harry Styles
-    Take My Breath – The Weeknd
-    Following the Sun – SUPER-Hi, Neeka
-    All We Got – Robin Schulz, KIDDO
-    Someone To You – BANNERS
-    Don’t Call Me Up – Mabel
-    Rather Be You – Tom Gregory
-    Who’s Laughing Now – Ava Max
-    Hypnotized – Purple Disco Machine
-    Drei Uhr Nachts – Mark Forster, LEA
-    Bad Liar – Imagine Dragons
-    Irgendwann ist jetzt – Max Giesinger
-    Castles – Freya Ridings
-    Tick Tock – Clean Bandit, Mabel, 24kGoldn
-    Wellerman – Nathan Evans
-    Take You Dancing – Jason Derulo
-    Self Control – Laura Branigan
-    Tu m’appelles – Adel Tawil, PEACHY
-    An Wunder – Wincent Weiss
-    Circles – Post Malone
-    Rooftop – Nico Santos
-    Shallow – Lady Gaga, Bradley Cooper
-    Can We Pretend – P!nk, Cash Cash
-    Tuesday – Burak Yeter, Danelle Sandoval
-    Love Me Now – Kygo, Zoe Wees
-    Subeme la radio – Enrique Iglesias
-    Feel It Still – Portugal. The Man
-    Prisoner – Miley Cyrus, Dua Lipa
-    Renegades – X Ambassadors
-    Legenden – Max Giesinger
-    La Cintura – Alvaro Soler
-    Let’s Be Lovers Tonight
-    Control - Zoe Wees
-    Little Bit Of Love – Tom Grennan
-    The One – Rea Garvey, VIZE
-    Magia – Alvaro Soler
-    Killing Me Softly With His Song – Fugees
-    Where Are You Now – Lost Frequencies
-    Burning Fire – Camino
-    Shy Away – Twenty One Pilots" hidden>
+    <input type="text" name="" id="raw" value="Love Tonight - Shouse
+    she's all i wanna be - Tate McRae
+    Cold Heart - Elton John, Dua Lipa
+    Rockstars - Malik Harris
+    Sorry - ClockClock
+    abcdefu - GAYLE
+    Remember Me - Michael Schulte
+    Infinity - James Young
+    Won't Forget You - Shouse
+    good 4 u - Olivia Rodrigo
+    In the Dark - Purple Disco Machine
+    Footprints - Tom Gregory
+    My Universe - Coldplay
+    THATS WHAT I WANT - Lil Nas X
+    Dopamine - Purple Disco Machine
+    Throwback - Michael Patrick Kelly
+    Love Like That - JC Stewart
+    Midnight Sky - Miley Cyrus
+    Zusammen - Die Fantastischen Vier, Clueso
+    Overpass Graffiti - Ed Sheeran
+    Moth to a Flame - The Weeknd
+    River - Tom Gregory
+    Anyone For You - George Ezra
+    Heat Waves - Glass Animals
+    Remedy - Leony
+    Where Are You Now - Lost Frequencies
+    Enemy - Imagine Dragons
+    Shivers - Ed Sheeran
+    Bad Habits - Ed Sheeran
+    Ein Song reicht - Kraftklub
+    STAY - The Kid LAROI, Justin Bieber
+    Flugmodus - Clueso
+    Young Right Now - Robin Schulz, Dennis Lloyd
+    Little Bit of Love - Tom Grennan
+    Brooklyn - Glockenbach, ClockClock
+    In Your Arms - Robin Schulz, Topic, Nico Santos
+    Bones - Imagine Dragons
+    Wrecked - Imagine Dragons
+    Blurry Eyes - Michael Patrick Kelly
+    Light Switch - Charlie Puth
+    When You're Gone - Shawn Mendes
+    Here Goes Nothing - Michael Schulte
+    Hurricane - Ofenbach, Ella Henderson
+    Alright - Alle Farben, KIDDO
+    Would I Lie To You - Nico Santos
+    Love Me Now - Kygo, Zoe Wees
+    Another Love - Tom Odell
+    Synchronize - Milky Chance
+    Zuhause - Max Giesinger
+    An Wunder - Wincent Weiss
+    Wasted Love - Ofenbach, Lagique
+    Giants - Dermot Kenndy
+    Let's Be Lovers Tonight - Rea Garvey
+    💫P!NK💫
+    💫Revolverheld💫
+    let you - iann dior
+    💫Twenty One Pilots💫
+    💫Roxette // ABBA💫
+    Easy On Me - Adele
+    " hidden>
 
     <div class="container">
         <div class="grid" id="grid">
